--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
   <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138584855-1"></script>
+		<script>
+  		window.dataLayer = window.dataLayer || [];
+ 			function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+  		gtag('config', 'UA-138584855-1');
+		</script>
     <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
     <meta charset="utf-8" />
     <meta name="generator" content="Hugo {{ .Hugo.Version }}" />
