--- a/assets/css/components/_posts_list.scss
+++ b/assets/css/components/_posts_list.scss
@@ -1,4 +1,5 @@
 .posts-list {
+  width: 60%;
   padding: 0;
 }
 
@@ -13,3 +14,8 @@
   font-size: 0.8em;
 }
 
+@media screen and (max-width: 670px) {
+    .posts-list {
+        width: 100%;
+    }
+}
