--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,11 +10,12 @@
 
   		gtag('config', 'UA-138584855-1');
 		</script>
-    <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
+    <title>{{ if .IsHome }}{{ .Site.Params.author }}{{ else }}{{ .Title }} | {{ .Site.Params.author }}{{ end }}</title>
     <meta charset="utf-8" />
     <meta name="generator" content="Hugo {{ .Hugo.Version }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="{{ .Site.Params.author | default "John Doe" }}" />
+    <link rel="icon" href="./images/favicon.ico" />
     <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}" />
     <base href="{{ .Site.BaseURL }}" />
     {{ $style := resources.Get "css/main.scss" | resources.ExecuteAsTemplate "css/main.scss" . | resources.ToCSS | resources.Minify | resources.Fingerprint -}}
@@ -23,7 +24,7 @@
   <body>
     <header class="app-header">
       <a href="/"><img class="app-header-avatar" src="./avatar.jpg" /></a>
-      <h1>{{ .Site.Params.author }}</h1>
+      <h1>{{ .Site.Title }}</h1>
       <p>{{ .Site.Params.description | default "Web & DevOps Engineer" }}</p>
       <div class="app-header-social">
         {{ range .Site.Params.social }}
