--- a/assets/css/components/_app.scss
+++ b/assets/css/components/_app.scss
@@ -2,6 +2,7 @@
   padding: 2em;
   background: $darkest-color;
   text-align: center;
+  box-shadow: 5px 0 10px -5px #474747;
 }
 
 .app-header-avatar {
@@ -24,6 +25,37 @@
   }
 }
 
+.app-container {
+    & > article {
+        flex: 1;
+
+        & > .categories {
+            width: 100%;
+            margin: 0 auto;
+            padding: 1em;
+            margin-top: 2em;
+            border: 2px dashed #1087c8;
+
+            @media screen and (min-width: 1024px){
+                width: 250px;
+                float: right;
+            }
+
+            h1 { margin: 0; }
+
+            ul {
+                padding: 0;
+                list-style: none;
+
+                & .cat-link {
+                    line-height: 2;
+                    text-transform: capitalize;
+                }
+            }
+        }
+    }
+}
+
 @media (min-width: 940px) {
   .app-header {
     position: fixed;
@@ -34,7 +66,8 @@
   }
 
   .app-container {
-    max-width: 68rem;
+    display: flex;
+    max-width: 77rem;
     margin-left: 17rem;
   }
 }
