--- a/assets/css/components/_posts_list.scss
+++ b/assets/css/components/_posts_list.scss
@@ -1,5 +1,5 @@
 .posts-list {
-  width: 60%;
+  width: 100%;
   padding: 0;
 }
 
@@ -7,6 +7,12 @@
   list-style: none;
   border-bottom: 1px dashed rgba(255, 255, 255, 0.3);
   padding: 0.4em 0;
+
+  .tag {
+      color: black;
+      padding: .2em .5em;
+      background-color: gray;
+  }
 }
 
 .posts-list-item-description {
