improved title size

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,11 +6,11 @@
         <li class="posts-list-item">
           <a class="posts-list-item-title" href="{{ .Permalink }}">{{ .Title }}</a>
           <span class="posts-list-item-description">
-            {{ if isset .Params "categories"}}
-                <span class="tag">{{ index .Params.categories 0 }}</span>
-            {{end}}
             {{ partial "icon.html" (dict "ctx" $ "name" "clock") }} {{ .ReadingTime }} min read -
             {{ .PublishDate.Format "Jan 2, 2006" }}
+            {{ if isset .Params "categories"}}
+                <span class="cat-tag">{{ index .Params.categories 0 }}</span>
+            {{end}}
           </span>
         </li>
       {{ end }}
