--- a/assets/css/components/_app.scss
+++ b/assets/css/components/_app.scss
@@ -32,13 +32,16 @@
         & > .categories {
             width: 100%;
             margin: 0 auto;
-            padding: 1em;
+            line-height: 2;
             margin-top: 2em;
+            padding: 1em 4em;
+            font-weight: bold;
             border: 2px dashed #1087c8;
 
             @media screen and (min-width: 1024px){
-                width: 250px;
+                width: 320px;
                 float: right;
+                text-align: right;
             }
 
             h1 { margin: 0; }
@@ -61,13 +64,13 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 17rem;
+    width: 20rem;
     min-height: 100vh;
   }
 
   .app-container {
     display: flex;
-    max-width: 77rem;
-    margin-left: 17rem;
+    max-width: 80rem;
+    margin-left: 20rem;
   }
 }
