--- a/assets/css/components/_posts_list.scss
+++ b/assets/css/components/_posts_list.scss
@@ -5,13 +5,20 @@
 
 .posts-list-item {
   list-style: none;
+  padding: .5em 0;
+  margin-bottom: .5em;
   border-bottom: 1px dashed rgba(255, 255, 255, 0.3);
-  padding: 0.4em 0;
 
-  .tag {
-      color: black;
-      padding: .2em .5em;
-      background-color: gray;
+  .posts-list-item-title {
+      font-size: 1.1em;
+  }
+
+  .cat-tag {
+      float: right;
+      color: white;
+      padding: 0 .5em;
+      border-radius: 3px;
+      border: 1px solid gray;
   }
 }
 
