--- a/assets/css/components/_app.scss
+++ b/assets/css/components/_app.scss
@@ -1,13 +1,14 @@
 .app-header {
   padding: 2em;
-  background: $darkest-color;
+  color: white;
   text-align: center;
+  background-color: #272747;
 }
 
 .app-header-avatar {
-  max-width: 12rem;
-  max-height: 12rem;
-  border-radius: 100%;
+  max-width: 10rem;
+  max-height: 10rem;
+  border-radius: 50%;
   border: 0.5rem solid $primary-color;
 }
 
@@ -45,6 +46,7 @@
                 & .cat-link {
                     line-height: 2;
                     color: #898989;
+                    font-weight: normal;
                     text-transform: capitalize;
                 }
             }
@@ -56,18 +58,18 @@
   .app-header {
     top: 0;
     left: 0;
-    width: 35em;
+    width: 30rem;
     position: fixed;
     min-height: 100vh;
 
     & > p {
-        width: 63%;
+        width: 75%;
         margin: 1em auto;
         font-size: 1.4em;
     }
   }
 
   .app-container {
-    margin-left: 35em;
+    margin-left: 30rem;
   }
 }
