--- a/assets/css/components/_post.scss
+++ b/assets/css/components/_post.scss
@@ -3,12 +3,22 @@
 }
 
 .post-content {
+  color: $lightest-color;
+  font-size: 16px;
+  line-height: 1.75;
+
   pre {
-    border-left: 0.4em solid rgba($primary-color, .8);
     padding-left: 1em;
+    border-left: 0.4em solid rgba($primary-color, .8);
+
+    @media all and (max-width: 1024px) {
+      font-size: 12px;
+    }
   }
 }
 
 .post-meta {
-  font-size: 0.8em;
+  font-size: 14px;
+  line-height: 2;
+  letter-spacing: .5px;
 }
