--- a/assets/css/components/_posts_list.scss
+++ b/assets/css/components/_posts_list.scss
@@ -15,21 +15,29 @@
   }
 
   .posts-list-item-title {
-      font-size: 1.2em;
+      font-size: 22px;
+      line-height: 1.2;
+      margin-bottom: .5em;
+      display: inline-block;
+      letter-spacing: .5px;
   }
 
   .cat-tag {
+      border: 0;
+      color: white;
+      padding: .5em;
+      font-size: 10px;
       margin-left: .5em;
-      color: $primary-color;
-      padding: 0 .5em;
-      border-radius: 3px;
-      border: 1px solid lightgray;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      background-color: #4592ea;
   }
 }
 
 .posts-list-item-description {
   display: block;
-  font-size: 0.8em;
+  font-size: 14px;
+  line-height: 20px;
 }
 
 @media screen and (max-width: 670px) {
