--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,15 @@
 {{ define "main" }}
+<header class="app-header">
+  <a href="/"><img class="app-header-avatar" src="/avatar.jpg" /></a>
+  <h1>{{ .Site.Title }}</h1>
+  <p>{{ .Site.Params.description | default "Web & DevOps Engineer" }}</p>
+  <div class="app-header-social">
+    {{ range .Site.Params.social }}
+      <a target="_blank" href="{{ .url }}">{{ partial "icon.html" (dict "ctx" $ "name" .name ) }}</a>
+    {{ end }}
+  </div>
+</header>
+<main class="app-container">
   <article class="posts">
     <h1>Posts</h1>
     <ul class="posts-list">
@@ -30,4 +41,5 @@
       </ul>
     </div>
   </article>
+</main>
 {{ end }}
