--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,15 @@
 {{ define "main" }}
+<header class="app-header">
+  <a href="/"><img class="app-header-avatar" src="/avatar.jpg" /></a>
+  <h1>{{ .Site.Title }}</h1>
+  <p>{{ .Site.Params.description | default "Web & DevOps Engineer" }}</p>
+  <div class="app-header-social">
+    {{ range .Site.Params.social }}
+      <a target="_blank" href="{{ .url }}">{{ partial "icon.html" (dict "ctx" $ "name" .name ) }}</a>
+    {{ end }}
+  </div>
+</header>
+<main class="app-container">
   <article class="post">
     <header class="post-header">
       <h1 class ="post-title">{{ .Title }}</h1>
@@ -30,4 +41,5 @@
 	{{ template "_internal/disqus.html" . }}
     </div>
   </article>
+</main>
 {{ end }}
