updated posts and listing styles along with page list title

--- a/assets/css/components/_posts_list.scss
+++ b/assets/css/components/_posts_list.scss
@@ -1,3 +1,12 @@
+
+.posts {
+
+  & > h2 {
+    font-weight: 500;
+    color: $lightest-color;
+  }
+}
+
 .posts-list {
   width: 100%;
   padding: 0;
@@ -15,7 +24,7 @@
   }
 
   .posts-list-item-title {
-      font-size: 22px;
+      font-size: 20px;
       line-height: 1.2;
       margin-bottom: .5em;
       display: inline-block;
