--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,7 +11,7 @@
 </header>
 <main class="app-container">
   <article class="posts">
-    <h1>Posts</h1>
+    <h2>{{.Title | humanize}}</h2>
     <ul class="posts-list">
       {{ range $index, $element := .Paginator.Pages }}
         <li class="posts-list-item">
