converted to hugo module

--- a/assets/css/components/_post.scss
+++ b/assets/css/components/_post.scss
@@ -8,6 +8,10 @@
   font-size: 16px;
   line-height: 1.75;
 
+  .highlight {
+    font-size: 14px;
+  }
+
   pre {
     padding-left: 1em;
     border-left: 0.4em solid rgba($primary-color, .8);
